# ast-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  README.md  USS_BLUEPRINT.md  dev_server.sh  dump_full_schema.py  dump_schema.py  pyproject.toml  requirements.txt  server.py  validate_installation.py
.trunk/: trunk.yaml
analyzed_projects/test_project_2025-12-12_21-24/: classes.json  full_ast.json  functions.json  imports.json  metadata.json  semantic_graph.json  structure.json
ast_mcp_server/: build_parsers.py  cli.py  embeddings.py  enhanced_tools.py  neo4j_client.py  neo4j_tools.py  output_manager.py  resources.py  server.py  server_llm.py  tools.py  transformation_tools.py  uss_agent.py  uss_agent_tools.py  uss_core.py  uss_tools.py  vector_store.py
ast_mcp_server/ast_mcp_server/parsers/: parsers_available.txt
ast_mcp_server/parsers/: parsers_available.txt
examples/: enhanced_example.py  example.py  example_ast_analysis.py  neo4j_ast_integration.py
tests/: dump_full_schema.py  dump_schema.py  output_upgrade.txt  test_neo4j_integration.py  test_tool_robustness.py  test_uss_agent.py
uss_data/chroma/: chroma.sqlite3
